Added some documentation to various functions

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <h1 class="display-5 mt-5">API - All Suppliers & Overlapping Suppliers Rates</h1>
       <hr class="my-3"/>
 
+      <!-- Controls to fetch API data and create new tokens -->
       <table class="w-100 table">
         <thead>
           <tr>
@@ -58,6 +59,8 @@
           </tr>
         </tbody>
       </table>
+
+      <!-- Container to store the fetched API data-->
       <div id="api_data_container" class="mt-5"></div>
 
     </div>
